# pubmed-reference-resolver

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  LICENSE  README.md  SECURITY.md  SKILL.md  crossref_check.py  journal_audit.py  main.py  mdpi_parser.py  measure_baseline.py  nlm_catalog_check.py  pyproject.toml  requirements.txt  three_class_classifier.py
.github/workflows/: tests.yml
baseline/: baseline_phase1.json  baseline_report.md
docs/operations/: SETUP_API_KEYS.md
docs/templates/: README.md  TEMPLATE_day_record.md  TEMPLATE_migration_instructions.md  TEMPLATE_phase_instructions.md
examples/expected_output/: abstract-38572751-set.txt
integration/: INTEGRATION_BRIEF.md  README.md
integration/docs/: BASELINE_GUIDE.md  CLAUDE_CODE_PROMPT.md  PRECHECK_GUIDE.md
integration/examples/: sample_baseline_phase1.json  sample_baseline_report.md
integration/patches/: 01_split_references_fix.patch  02_mdpi_fast_path.patch
integration/src/: journal_audit.py  manual_overrides.yaml  mdpi_parser.py
integration/tests/: test_mdpi_parser.py  test_post_integration.py
integration/tools/: verify_integration.sh
references/: citation_style_examples.md
skill_package/: DEVELOPMENT_NOTES.md  SKILL.md  journal_audit.py  manual_overrides.yaml  mdpi_parser.py
tests/: test_crossref_check.py  test_env_loader.py  test_gitleaks_smoke.py  test_integration_149refs.py  test_integration_apa_45refs.py  test_integration_cell_45refs.py  test_integration_mdpi_173refs.py  test_integration_vancouver_24refs.py  test_integration_vancouver_35refs.py  test_journal_audit.py  test_main_split_references.py  test_mdpi_parser.py  test_nlm_catalog_check.py  test_overrides_contract.py  test_pre_integration_baseline.py  test_split_references_doi_boundary.py  test_three_class_classifier.py
tools/: build_apa_fixture.py  build_cell_fixture.py  build_mdpi_replacement_fixture.py  build_vancouver_replacement_fixture.py
(+133 files in other folders)
